--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "ag-grid-angular": "^35.0.0",
+    "ag-grid-community": "^35.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
